# synlude

./: .gitignore  README.md  hie.yaml  package.yaml  prelude-prime.cabal  stack.yaml  synlude.cabal
src/: PreludePrime.hs  Synlude.hs
src/PreludePrime/: Assert.hs  Enum.hs  Exception.hs  Numeric.hs
src/Synlude/: Assert.hs  Exception.hs  Numeric.hs
