name:                prelude-prime
version:             0.1.0.0
synopsis:            My Prelude alternative
homepage:            https://github.com/lloydac/prelude-prime#readme
author:              Lloyd Cunningham
maintainer:          lloyd.cunningham@me.com
copyright:           2017 Lloyd Cunningham
category:            Prelude
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag assert
  description:
    If enabled, the assert functions will throw exceptions when passed False.
    If disabled, the assert functions will not evaluate their arguments.
  default: True
  manual: True

library
  hs-source-dirs:      src
  exposed-modules:     PreludePrime
                     , PreludePrime.Exception
                     , PreludePrime.Numeric
  build-depends:       base >= 4.10 && < 5
                     , deepseq
  ghc-options:         -Wall -Werror -fwarn-tabs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  if flag(assert)
    cpp-options: -DASSERT=1

source-repository head
  type:     git
  location: https://github.com/lloydac/prelude-prime
