cabal-version: 2.2

name:           prelude-prime
version:        0.1.0.0
synopsis:       My custom prelude, plus additional utilities
author:         Lloyd Cunningham
maintainer:     lloyd.cunningham@me.com
copyright:      2018 Lloyd Cunningham
category:       Prelude
build-type:     Simple

flag ignore-asserts
  description: Causes the assert functions to become identity functions.
  manual: True
  default: False

library
  hs-source-dirs: src
  exposed-modules:
    PreludePrime
    PreludePrime.Assert
    PreludePrime.Exception
    PreludePrime.Numeric

  build-depends:
      base >=4.11 && <5
    , deepseq ^>=1.4.3
    , exceptions ^>=0.10.0
    , unliftio-core >=0.1.1 && <0.3
    , witherable-class ^>=0

  ghc-options:
    -Wall
    -Wcompat
    -Wredundant-constraints
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -fwarn-tabs

  if flag(ignore-asserts)
    cpp-options: -DPRELUDE_PRIME_IGNORE_ASSERTS=1
  else
    cpp-options: -DPRELUDE_PRIME_IGNORE_ASSERTS=0

  default-language: Haskell2010
